--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- avoid favicon 404 in static hosting -->
-    <link rel="icon" href="data:,">
+    <link rel="icon" href="favicon.ico">
     <title>GitHub Repo Tree Browser</title>
     <style>
         /* THEME TOKENS */
